fixed minor alignments

--- a/public/css/webcss.css
+++ b/public/css/webcss.css
@@ -22,7 +22,7 @@ body {
   font-family: 'Sanchez', sans-serif;
   font-weight:400;
   font-size:50px;
-  padding-top: 25px;
+  padding-top: 50px;
   padding-bottom: 25px;
   letter-spacing: 3px;
 }
